--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- redirect to custom domain -->
+    <link rel="canonical" href="https://www.kailebhammontree.com"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
