updated meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover Kaileb Hammontree, an accomplished Full-Stack Web Developer based in Central Florida. With certifications from The University of Central Florida as a Cyber Security Professional and Full-Stack Web Developer, Kaileb brings a wealth of knowledge and skills to deliver exceptional results for your next project. Explore Kaileb's portfolio and take the first step by reaching out through our convenient contact section to initiate a fruitful conversation today."
     />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
