several performance changes

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kaileb Hammontree | Web Dev</title>
-    <script id="react-dotenv" src="./env.js"></script>
+    <link rel="preload" fetchpriority="high" as="image" href="../src/assets/img/transparent-name-logo-2060.webp" type="image/webp">
+    <!-- <script id="react-dotenv" src="./env.js"></script> -->
   </head>
 
   <body>
