added new avatar

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Discover Kaileb Hammontree, an accomplished Full-Stack Web Developer based in Central Florida. With certifications from The University of Central Florida as a Cyber Security Professional and Full-Stack Web Developer, Kaileb brings a wealth of knowledge and skills to deliver exceptional results for your next project. Explore Kaileb's portfolio and take the first step by reaching out through our convenient contact section to initiate a fruitful conversation today."
+      content="Discover Kaileb Hammontree, the owner of Hammontree Full-Stack Solutions, LLC, and an accomplished Full-Stack Web Developer based in Central Florida. With certifications from The University of Central Florida as a Cyber Security Professional and Full-Stack Web Developer, Kaileb brings a wealth of knowledge and skills to deliver exceptional results for your next project. Explore Kaileb's portfolio and take the first step by reaching out through our convenient contact section to initiate a fruitful conversation today."
     />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,7 +34,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kaileb Hammontree | Web Dev</title>
-    <link rel="preload" fetchpriority="high" as="image" href="../src/assets/img/transparent-name-logo-2060.webp" type="image/webp">
     <!-- <script id="react-dotenv" src="./env.js"></script> -->
   </head>
 
