re added manifest

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Rubik&amp;family=Rubik+Dirt&amp;family=Rubik+Distressed&amp;family=Josefin+Sans&amp;display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- redirect to custom domain -->
     <link rel="canonical" href="https://www.kailebhammontree.com"/>
     <title>Kaileb Hammontree | Web Dev</title>
